Add filters into get orders request
